Add theme header

--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,11 @@
+/**
+ * @name Bring Back WackyWebM Epicness
+ * @author OIRNOIR
+ * @version 1.0.11
+ * @description Restores the webm glitch Discord had in July 2022.
+ * @source https://github.com/OIRNOIR/bbwwme
+ */
+
 div[style*="aspect-ratio"]:not([class*="embed_"] div) {
 	aspect-ratio: unset !important;
 	width: auto !important;
