--- a/src/main.css
+++ b/src/main.css
@@ -18,13 +18,18 @@ video[style*="width"]:not(#gif-picker-tab-panel video):not([style*="width: auto"
 	max-height: 100% !important;
 }
 
-[class*="imageWrapper_"]:has(video[style*="width"]:not(#gif-picker-tab-panel video):not([style*="width: auto"]):not(div.media-engine-video video)) > div {
+[class*="imageWrapper_"]:has(
+		video[style*="width"]:not(#gif-picker-tab-panel video):not([style*="width: auto"]):not(div.media-engine-video video)
+	)
+	> div {
 	background-color: transparent !important;
 	display: inline-flex !important;
 	aspect-ratio: unset !important;
 }
 
-[class*="imageWrapper_"]:has(video[style*="width"]:not(#gif-picker-tab-panel video):not([style*="width: auto"]):not(div.media-engine-video video)) {
+[class*="imageWrapper_"]:has(
+		video[style*="width"]:not(#gif-picker-tab-panel video):not([style*="width: auto"]):not(div.media-engine-video video)
+	) {
 	aspect-ratio: unset !important;
 	display: inline-flex !important;
 }
